[package]
name = "usbd-ccid"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/usbd-ccid"
repository = "https://github.com/trussed-dev/usbd-ccid"

[dependencies]
delog = "0.1.0"
embedded-time = "0.12"
heapless = "0.7"
# heapless-bytes = "0.3"
interchange = "0.2"
iso7816 = "0.1"
usb-device = { version = "0.2.3", features = ["control-buffer-256"] }

[features]
default = []
highspeed-usb = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
